# gpui-router

./: Cargo.toml  README.md
crates/router/: Cargo.toml
crates/router/examples/: basic.rs  nested_router.rs  params.rs  sub_router.rs
